Fix shareButton alignment

--- a/src/components/PathDetails/PathDetails.module.css
+++ b/src/components/PathDetails/PathDetails.module.css
@@ -1,4 +1,6 @@
 .summary {
+  display: flex;
+  flex: 1;
   align-items: center;
 }
 
@@ -17,6 +19,6 @@
   flex: 1;
 }
 
-.shareButton {
+.summary > .shareButton {
   margin-left: auto;
 }
